# day-schedule-wasm

./: .gitignore  Cargo.toml  README.md  index.html  main.js
src/: events.rs  lib.rs  matrix.rs  positions.rs  svg.rs  types.rs
web/: index.html  main.js  package.json  webpack.config.js
