[package]
name = "events_matrix"
description = "Internal package"
license = "MIT"
version = "0.1.0"
repository = "https://github.com/kolybasov/events_matrix.git"
authors = ["Mykola Basov <kolybasov@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
lazy_static = "1.0"

[dev-dependencies]
pretty_assertions = "0.5.1"
